//
// Copyright 2018, TeamDev. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package spine.users.organization;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.users.organization";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "spine/core/tenant_id.proto";
import "spine/net/internet_domain.proto";
import "spine/users/identifiers.proto";

// A new organization was created.
//
message OrganizationCreated {

    OrganizationId id = 1;

    // A name of the organization to display on UI.
    string display_name = 2 [(required) = true];

    // A domain of the organization.
    net.InternetDomain domain = 3;

    // A tenant associated with the organization.
    core.TenantId tenant = 4 [(required) = true];
}

// An organization was deleted.
//
message OrganizationDeleted {

    OrganizationId id = 1;
}

// An organization was renamed.
//
message OrganizationRenamed {

    OrganizationId id = 1;

    // A new name of the organization.
    string new_name = 2 [(required) = true];

    // An old name of the organization.
    string old_name = 3 [(required) = true];
}

// An organization domain was changed.
//
message OrganizationDomainChanged {

    OrganizationId id = 1;

    // A new domain of the organization.
    net.InternetDomain new_domain = 2 [(required) = true];

    // An old domain of the organization.
    net.InternetDomain old_domain = 3 [(required) = true];
}

// An organization tenant was changed.
//
message OrganizationTenantChanged {

    OrganizationId id = 1;

    // A new tenant associated with the organization.
    core.TenantId new_tenant = 2 [(required) = true];

    // The previous tenant associated with the organization.
    core.TenantId old_tenant = 3 [(required) = true];
}
